clusters/cloudydad/apps/tools/whoami/whoami-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
